# talent-pool

./: .gitignore  CLAUDE.md  README.md  start.bat
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  auth_models.py  db.py  resume_models.py  schemas.py
backend/app/routes/: __init__.py  api.py  auth.py  chat.py
backend/app/services/: __init__.py  ai.py  auth.py  email_sync.py  parser.py  preprocessor.py  scanner.py  search.py  vector.py
deploy/: README.md  deploy-backend.sh  deploy.bat  deploy.sh  redeploy.sh  server-setup.sh  setup-nginx.sh
docs/: api-contract.md  user-guide.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  types.js
frontend/src/api/: index.js
frontend/src/components/: ThemeSwitcher.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  theme.js
frontend/src/styles/: themes.css
frontend/src/views/: AdminView.vue  ChatView.vue  DetailView.vue  EmailConfigView.vue  EmailTutorialView.vue  HomeView.vue  LoginView.vue  ManualView.vue  RecycleBinView.vue  RegisterView.vue
scripts/: reprocess.py
